# ChangeLog for dev-db/unixODBC
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/unixODBC/ChangeLog,v 1.60 2006/12/01 16:51:11 chtekk Exp $

  01 Dec 2006; Luca Longinotti <chtekk@gentoo.org>
  -files/unixODBC-2.2.6-configure.in.patch, -files/gentoo-yac.diff,
  metadata.xml, -unixODBC-2.0.8.ebuild, -unixODBC-2.2.2.ebuild,
  -unixODBC-2.2.6.ebuild, -unixODBC-2.2.6-r1.ebuild, -unixODBC-2.2.8.ebuild,
  -unixODBC-2.2.11.ebuild, unixODBC-2.2.11-r1.ebuild:
  PHP herd takes over maintainership, fixup/cleanup ebuilds.

  17 Nov 2006; Saleem Abdulrasool <compnerd@gentoo.org> unixODBC-2.2.6.ebuild,
  unixODBC-2.2.6-r1.ebuild, unixODBC-2.2.8.ebuild, unixODBC-2.2.11.ebuild,
  unixODBC-2.2.11-r1.ebuild:
  Dropping gnome useflag for gnome-1.x removal

  09 Oct 2006; <malc@gentoo.org> unixODBC-2.2.11-r1.ebuild:
  Fix multilib-strict QA checks - bug #149983

  15 Jul 2006; Bryan Østergaard <kloeri@gentoo.org> metadata.xml:
  Remove rphillips from metadata.xml as he's retired.

  10 Jul 2006; Javier Villavicencio <the_paya@gentoo.org>
  unixODBC-2.2.11-r1.ebuild:
  Added ~x86-fbsd keyword.

  24 Jun 2006; Doug Goldstein <cardoe@gentoo.org> unixODBC-2.2.2.ebuild,
  unixODBC-2.2.6.ebuild, unixODBC-2.2.6-r1.ebuild, unixODBC-2.2.8.ebuild,
  unixODBC-2.2.11.ebuild, unixODBC-2.2.11-r1.ebuild:
  USE flag change qt->qt3/qt4 bug #137785

  14 Jan 2006; Mike Frysinger <vapier@gentoo.org>
  +files/unixODBC-2.2.11-flex.patch, unixODBC-2.2.11-r1.ebuild:
  Add patch by Francisco José Cañizares Santofimia to fix building with
  newer versions of flex #110167.

  02 Oct 2005; Aron Griffis <agriffis@gentoo.org> unixODBC-2.2.11-r1.ebuild:
  Mark 2.2.11-r1 stable on ia64

  02 Oct 2005; MATSUU Takuto <matsuu@gentoo.org> unixODBC-2.2.11-r1.ebuild:
  Stable on sh.

  29 Sep 2005; Hardave Riar <hardave@gentoo.org> unixODBC-2.2.11-r1.ebuild:
  Stable on mips.

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> unixODBC-2.2.11-r1.ebuild: