@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/unixODBC
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/unixODBC/ChangeLog,v 1.60 2006/12/01 16:51:11 chtekk Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/unixODBC/ChangeLog,v 1.61 2006/12/02 17:55:52 chtekk Exp $
+
+  02 Dec 2006; Luca Longinotti <chtekk@gentoo.org>
+  unixODBC-2.2.11-r1.ebuild:
+  Fix bug #151555.
 
   01 Dec 2006; Luca Longinotti <chtekk@gentoo.org>
   -files/unixODBC-2.2.6-configure.in.patch, -files/gentoo-yac.diff,
